@@ -1,3 +1,9 @@
+Fri Jun 21 07:42:02 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Compiler_Features_13_Test.cpp:
+        * tests/Intrusive_Auto_Ptr_Test.cpp:
+          Fixed some coverity reported errors
+
 Thu Jun 20 16:24:03 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * protocols/ace/INet/FTP_Response.h:
